# cmake-git-version-tracking

./: CMakeLists.txt  git_watcher.cmake
cmake/: Config.cmake.in  install_paths.cmake
